--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
     transform-origin: center;
     display: inline-block;
     transition: transform 0.3s ease-in-out;
+    height: 24px;
+    width: 24px
 }
 
 @keyframes gary-bounce-rotate {
